# rust-template

./: Dockerfile  Makefile  README.md  docker-compose.yml
base/: Cargo.toml
base/src/: main.rs
web-app/src/: main.rs
yew-app/: Cargo.toml  index.html
yew-app/src/: main.rs
yew-app/src/pages/: counter.rs  mod.rs  video.rs  webcam.rs
