[package]
edition = "2021"
name = "root"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.10.0"
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1.2", features = ["full"]}
warp = "0.3"
