[package]
edition = "2021"
name = "yew-app"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.2"
serde = {version = "1.0", features = ["derive"]}
wasm-bindgen-futures = "0.4"
yew = "0.19.3"
yew-router = "0.16.0"
